; ModuleID = '/home/carl/AnghaBench/sway/sway/input/extr_seat.c_seatop_button.c'
source_filename = "/home/carl/AnghaBench/sway/sway/input/extr_seat.c_seatop_button.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sway_seat = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 (%struct.sway_seat*, i32, %struct.wlr_input_device*, i32, i32)* }
%struct.wlr_input_device = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @seatop_button(%struct.sway_seat* %0, i32 %1, %struct.wlr_input_device* %2, i32 %3, i32 %4) #0 {
  %6 = alloca %struct.sway_seat*, align 8
  %7 = alloca i32, align 4
  %8 = alloca %struct.wlr_input_device*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store %struct.sway_seat* %0, %struct.sway_seat** %6, align 8
  store i32 %1, i32* %7, align 4
  store %struct.wlr_input_device* %2, %struct.wlr_input_device** %8, align 8
  store i32 %3, i32* %9, align 4
  store i32 %4, i32* %10, align 4
  %11 = load %struct.sway_seat*, %struct.sway_seat** %6, align 8
  %12 = getelementptr inbounds %struct.sway_seat, %struct.sway_seat* %11, i32 0, i32 0
  %13 = load %struct.TYPE_2__*, %struct.TYPE_2__** %12, align 8
  %14 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %13, i32 0, i32 0
  %15 = load i32 (%struct.sway_seat*, i32, %struct.wlr_input_device*, i32, i32)*, i32 (%struct.sway_seat*, i32, %struct.wlr_input_device*, i32, i32)** %14, align 8
  %16 = icmp ne i32 (%struct.sway_seat*, i32, %struct.wlr_input_device*, i32, i32)* %15, null
  br i1 %16, label %17, label %29

17:                                               ; preds = %5
  %18 = load %struct.sway_seat*, %struct.sway_seat** %6, align 8
  %19 = getelementptr inbounds %struct.sway_seat, %struct.sway_seat* %18, i32 0, i32 0
  %20 = load %struct.TYPE_2__*, %struct.TYPE_2__** %19, align 8
  %21 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %20, i32 0, i32 0
  %22 = load i32 (%struct.sway_seat*, i32, %struct.wlr_input_device*, i32, i32)*, i32 (%struct.sway_seat*, i32, %struct.wlr_input_device*, i32, i32)** %21, align 8
  %23 = load %struct.sway_seat*, %struct.sway_seat** %6, align 8
  %24 = load i32, i32* %7, align 4
  %25 = load %struct.wlr_input_device*, %struct.wlr_input_device** %8, align 8
  %26 = load i32, i32* %9, align 4
  %27 = load i32, i32* %10, align 4
  %28 = call i32 %22(%struct.sway_seat* %23, i32 %24, %struct.wlr_input_device* %25, i32 %26, i32 %27)
  br label %29

29:                                               ; preds = %17, %5
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
